--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,4 @@
 @import url("blocks/_btn.css");
 @import url("blocks/_header.css");
 @import url("blocks/logo.css");
+@import url("blocks/nav.css");
