--- a/css/vars.css
+++ b/css/vars.css
@@ -13,4 +13,6 @@
 --gap: 20px;
 --container-width: 1280px;
 --container-offset: 15px;
+
+  --text-trs: color 0.3s ease, border-color 0.3s ease, background-color 0.3s ease
 }
