--- a/css/blocks/_header.css
+++ b/css/blocks/_header.css
@@ -7,7 +7,7 @@
 }
 
 .header__top {
-    --container-width: 1330px 
+    --container-width: 1330px;
     padding: 24px 0;
     background: var(--white);
 }
@@ -44,7 +44,27 @@
     font-size: 16px;
     color: #726e8d;
     text-decoration: none;
+    transition: var(--main-trs);
 }
+
+.header__link:focus{
+    outline: none;
+}
+.header__link:focus-visible{
+    outline: var(--outline);
+    outline-offset: var(--outline-offset);
+
+}
+
+@media (any-hover: hover) { 
+    .header__link:hover {
+      color: var(--primary);
+    }
+  }
+
+ .header__link:active {
+    color: var(--dark-primary);
+ }
 
 .header__buttons {
     display: flex;
@@ -56,4 +76,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #2A254B;
+    transition: var(--main);
 }
+
+.header__button svg path {
+    fill: currentColor;
+}
+
+.header__button:focus{
+    outline: none;
+}
+.header__button:focus-visible{
+    outline: var(--outline);
+    outline-offset: var(--outline-offset);
+
+}
+
+@media (any-hover: hover) { 
+    .header__button:hover {
+      color: #726e8d;
+    }
+  }
+
+ .header__button:active {
+    color: var(--dark-primary);
+ }
