--- a/css/_fonts.css
+++ b/css/_fonts.css
@@ -7,14 +7,14 @@
 
 @font-face {
     font-family: "Clash Display";
-    src: url(../fonts/ClashDisplay-Regular.woff2);
+    src: url("/fonts/ClashDisplay-Regular.woff2");
     font-weight: 400;
     font-display: swap;
 }
 
 @font-face {
     font-family: "Clash Display";
-    src: url(../fonts/ClashDisplay-Medium.woff2);
+    src: url("/fonts/ClashDisplay-Medium.woff2");
     font-weight: 500;
-    font-display: swap;
+    font-display: swap; 
 }
