--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,4 @@
 @import url("blocks/_header.css");
 @import url("blocks/logo.css");
 @import url("blocks/nav.css");
+@import url("blocks/_hero.css");
