--- a/css/vars.css
+++ b/css/vars.css
@@ -14,5 +14,8 @@
 --container-width: 1280px;
 --container-offset: 15px;
 
-  --text-trs: color 0.3s ease, border-color 0.3s ease, background-color 0.3s ease
+  --text-trs: color 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
+
+  --outline: 2px dashed currentColor;
+  outline-offset: 2px;
 }
