--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,9 @@
 /* blocks */
 @import url("blocks/_btn.css");
 @import url("blocks/_header.css");
+@import url("blocks/_benefitz.css");
 @import url("blocks/logo.css");
 @import url("blocks/nav.css");
+@import url("/css/blocks/_title.css");
 @import url("blocks/_hero.css");
+@import url("blocks/_grid.css");
