--- a/css/blocks/_benefits.css
+++ b/css/blocks/_benefits.css
@@ -10,11 +10,11 @@
 
 .benefits_item--next {
     background-image: url("../../img/benefits-1.svg");
-    background-color: black;
+    
     
 }
 
-.benefits_item--next {
+.benefits_item--made  {
     background-image: url("../../img/benefits-2.svg");
 }
 
